fixed tagline css and image on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -143,7 +143,7 @@ section {
 // ------------------- LOGO AREA ---------------------------
 .text-tagline {
     color: white;
-    line-height: 1.3 !important;
+    line-height: 1.1 !important;
     font-size: 1.0rem;
     font-weight: 300 !important;
 }
